# apex

./: .gitignore  .gitmodules  BENCHMARK.md  BENCHMARK_COMPARISON.md  CHANGELOG.md  CMakeLists.txt  Makefile  Package.swift  README.md  apex-plugins.json.example  test.md  test_spm.sh
.github/workflows/: release.yml
Formula/: apex.rb
build-release/: Makefile
build-test/: apex
cli/: main.c
docs/: USER_GUIDE.md
examples/: bracketed_spans_demo.md
include/apex/: apex.h  module.modulemap
man/: apex.1  apex.1.md
objc/: Apex.swift  NSString+Apex.h  NSString+Apex.m
src/: _README.md  apex.c  html_renderer.c  html_renderer.h  plugins.c  plugins_remote.c  pretty_html.c
src/extensions/: advanced_tables.c  citations.c  definition_list.h  emoji.c  ial.c  ial.h  includes.c  includes.h  inline_tables.c  inline_tables.h  metadata.c  metadata.h  relaxed_tables.c  relaxed_tables.h  table_html_postprocess.c  wiki_links.c
tests/: advanced_tables_test.md  bracketed_spans_test.md  image_and_encoding_test.md  inline_tables_test.md  test_runner.c  test_tables.c  yaml_test.md
tests/ApexSPMTest/: main.swift
tests/fixtures/: comprehensive_test.md
tests/fixtures/includes/: metadata_options.yml
